--- a/tdiw/views/head.html
+++ b/tdiw/views/head.html
@@ -1,6 +1,7 @@
 <head>
     <title>Dreamstore</title>
     <meta charset="UTF-8">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <link rel="icon" href="views/resources/img/logo.png">
     <link rel="stylesheet" type="text/css" href="views/resources/css/index.css"/>
     <link rel="stylesheet" type="text/css" href="views/resources/css/products.css"/>
